# win-aly

./: README.rst  pyproject.toml
datasets/: dft.csv  dft_test.csv  dft_train.csv
final_project/: Final_Project_Part1.ipynb  Final_Project_Part2.ipynb  Final_Project_Part3.ipynb  win.xbmodel
final_project/.ipynb_checkpoints/: Final_Project_Part1-checkpoint.ipynb  Final_Project_Part3-checkpoint.ipynb  final_project-checkpoint.ipynb  lab03_amadou_ly-checkpoint.ipynb
tests/: test_wine_aly.py
wine_aly/: custom_transformers.py  helpers.py  preprocessor.py
wine_aly.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
